@@ -1,5 +1,7 @@
 Obsoletes: pupmod-windowmanager-test
 Obsoletes: pupmod-windowmanager > 5.0.0-0
 Provides: pupmod-simp-windowmanager
+Requires: pupmod-puppetlabs-stdlib < 5.0.0-0
+Requires: pupmod-puppetlabs-stdlib >= 4.9.0-0
 Requires: pupmod-simp-mozilla < 6.0.0-0
 Requires: pupmod-simp-mozilla >= 5.0.0-0
